--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8.12)
+cmake_minimum_required(VERSION 3.4)
 project(chippuhachi)
 
 add_definitions("-std=c++11")
@@ -6,4 +6,10 @@ add_definitions("-std=c++11")
 include(build/conanbuildinfo.cmake)
 conan_basic_setup()
 
-add_executable(chippuhachi src/main.cpp)
+enable_testing()
+set(CMAKE_CXX_STANDARD 14)
+
+add_subdirectory(src)
+add_subdirectory(tests)
+
+add_executable(chippuhachi main.cpp)
