--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,17 @@
 cmake_minimum_required(VERSION 3.4)
 project(chippuhachi)
 
-add_definitions("-std=c++11")
+enable_testing()
+set(CMAKE_CXX_STANDARD 14)
 
 include(build/conanbuildinfo.cmake)
 conan_basic_setup()
 
-enable_testing()
-set(CMAKE_CXX_STANDARD 14)
-
 add_subdirectory(src)
 add_subdirectory(tests)
 
-add_executable(chippuhachi main.cpp)
+add_executable(chippuhachi src/main.cpp)
+
+target_link_libraries(chippuhachi libchippuhachi)
+
+install(TARGETS chippuhachi DESTINATION bin)
